- Fixed bug (from as early as Cheetah) that incorrectly added to the address name when parsing had to resume. (a.b became a.b.b and then a.b.b.b with every cycle).
-- Fix entails Engine::interpretToken, case TT_Name now ALWAYS committing the token usage.
-- Fix entails Engine::parseFuncFoundTask() now no longer skipping a token but instead committing usage after each part of a name is collected.


====================
2018/2/26
v 5-0.32

- Changed isObject**** checks to use struct enum value directly.
- Added isObjectList().
- Added _are_list system function and implementation of "are_list" in the engine.
- Fixed bug in ObjectList - failed to set its type upon initialization.
- Fixed ObjectDecimal::typeName() return to say "dcml" instead of "dec".
- Added _make_list system function and implementation of "list" in the engine.
- Fixed ObjectList::gotoIndex() to now perform wrapping for negative indices.
- Fixed bug in Engine::Engine::ParseLoop_AddLoopSkip() that failed to check for task stack size prior to searching it for a while loop.
- Added implementation for ObjectList::getItem(Integer).
- Changed implementations of ObjectList::swap() and replace() to use gotoIndex() for consistency.
- Added the following list functions to built-in:
-- _list_append,	"append"
-- _list_prepend,	"prepend"
-- _list_insert,	"insert"
-- _list_get_item,	"item"
-- _list_remove,	"erase"
-- _list_clear, 	"dump"
-- _list_swap,		"swap"
-- _list_replace,	"replace"
- Fixed bugs is ObjectList methods that failed to check for null object being saved (the Node constructor doesn't check).
- Fixed bug in ObjectList::Node that failed to increment the reference count of the item being saved in the node.
- Fixed bug in ObjectList::Node that failed to disown the item when it was a function container.
- Fixed bug in ObjectList that didn't synchronize the selector node and index.
- Fixed bug in ObjectList::Node::destroy() that didn't update it's prior and post nodes when it was deleted.